...
        return rows
    }
    
    private func loadCategory(_ categories: [Category]) -> [AnyObject] {
        var rows = [AnyObject]()
        if categories.count > 0 {
            rows.append(HeaderCell(title: "Categorias"))
            rows.append(CategoryCell(categories, delegate: self))
        }
        return rows
    }
    
    private func loadBestSellers(_ products: [Product]) -> [AnyObject] {
        var rows = [AnyObject]()
        
        if products.count > 0 {
            rows.append(HeaderCell(title: "Mais vendidos"))
            products.forEach { (item) in
                rows.append(ProductCell(item))
                rows.append(EmptyCell(left: 22))
            }
        }
        
...
